tests/ui/consts/const-eval/const-eval-overflow-2.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const-eval-overflow-2.rs:11:25
   |
LL | const NEG_NEG_128: i8 = -NEG_128;
   |                         ^^^^^^^^ attempt to negate `i8::MIN`, which would overflow

error: could not evaluate constant pattern
  --> $DIR/const-eval-overflow-2.rs:15:9
   |
LL |         NEG_NEG_128 => println!("A"),
   |         ^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
